improve window and dialog placement in a multi-monitor setup

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -2,7 +2,7 @@ LanguageTool Change Log
 
 2.3-SNAPSHOT (release planned for 2013-09-29)
 
- -...
+ -standalone version: improved window and dialog placement in a multi-monitor setup
 
 
 2.2 (2013-06-30)
