--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -4,6 +4,8 @@ LanguageTool Change Log
 
  -standalone version: improved window and dialog placement in a multi-monitor setup
 
+ -embedded server: uses default port (8081) again if started without arguments
+
 
 2.2 (2013-06-30)
 
