standalone version: remember the language selection, will be used at the next start

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -2,6 +2,8 @@ LanguageTool Change Log
 
 2.3-SNAPSHOT (release planned for 2013-09-29)
 
+ -standalone version: remember the language selection for the next start
+
  -standalone version: improved window and dialog placement in a multi-monitor setup
 
  -embedded server: uses default port (8081) again if started without arguments
