[PT] Updated the Portuguese list of improvements.
I wrote that I added around 100+ new compound words, but three months from now I expect to have 500+ new words.

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -8,6 +8,10 @@ LanguageTool Change Log
 
  -embedded server: uses default port (8081) again if started without arguments
 
+ -Portuguese:
+  -added/improved a few rules
+  -it now has around 100+ new compound words taken from a huge Porto Editora dictionary
+
 
 2.2 (2013-06-30)
 
