[PT] - Updated the number of compound words.

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -10,7 +10,7 @@ LanguageTool Change Log
 
  -Portuguese:
   -added/improved a few rules
-  -it now has around 100+ new compound words taken from a huge Porto Editora dictionary
+  -it now has around 2300 compound words taken from a huge Porto Editora dictionary
 
 
 2.2 (2013-06-30)
