update morfologik to 1.7.1

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -12,6 +12,9 @@ LanguageTool Change Log
   -added/improved a few rules
   -it now has around 2300 compound words taken from a huge Porto Editora dictionary
 
+ -updated the morfologik-stemming library to version 1.7.1 to enable better suggestions,
+  including proper handling of diacritics and replacement patterns (equivalents of MAP
+  and REP features in hunspell dictionaries)
 
 2.2 (2013-06-30)
 
