deprecate method with misleading name + add replacement; clean up javadoc and code formatting

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -16,6 +16,9 @@ LanguageTool Change Log
   including proper handling of diacritics and replacement patterns (equivalents of MAP
   and REP features in hunspell dictionaries)
 
+ -some methods in the API have been deprecated
+
+
 2.2 (2013-06-30)
 
  -Breton:
