[PT] Removed all the references I made to the huge Porto Editora dictionary.

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -10,7 +10,7 @@ LanguageTool Change Log
 
  -Portuguese:
   -added/improved a few rules
-  -it now has around 2300 compound words taken from a huge Porto Editora dictionary
+  -it now has around 2400 compound words
 
  -updated the morfologik-stemming library to version 1.7.1 to enable better suggestions,
   including proper handling of diacritics and replacement patterns (equivalents of MAP
@@ -73,7 +73,7 @@ LanguageTool Change Log
 
  -Portuguese:
   -added/improved a few rules
-  -it now has around 2000 compound words taken from a huge Porto Editora dictionary
+  -it now has around 2000 compound words
 
  -Russian:
   -added some new rules (thanks for these rules to Julia Semenenko)
@@ -178,7 +178,7 @@ LanguageTool Change Log
 
  -Portuguese:
   -added/improved several rules
-  -it now has over 1500 compound words taken from a huge Porto Editora dictionary
+  -it now has over 1500 compound words
 
  -Russian:
   -several new rules
@@ -270,7 +270,7 @@ LanguageTool Change Log
   -many new rules and rule updates
 
  -Portuguese:
-  -Added hundreds of compound words taken from a huge Porto Editora dictionary
+  -Added hundreds of compound words
   -Added/improved several rules
   -Replaced the current dictionary with PT-pt (pre-language agreement).
    To use the post-language agreement, use the PT-br one.
