fix: the "About" dialog didn't work in Apache OpenOffice 4.0

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -18,6 +18,9 @@ LanguageTool Change Log
 
  -some methods in the API have been deprecated
 
+ -OpenOffice/LibreOffice integration:
+  -fix: the "About" dialog didn't work in Apache OpenOffice 4.0
+
 
 2.2 (2013-06-30)
 
