update: Wikipedia text extraction

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -21,6 +21,8 @@ LanguageTool Change Log
  -OpenOffice/LibreOffice integration:
   -fix: the "About" dialog didn't work in Apache OpenOffice 4.0
 
+ -text extraction from Wikipedia dumps has been improved
+
 
 2.2 (2013-06-30)
 
