--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -2,6 +2,8 @@ LanguageTool Change Log
 
 2.3-SNAPSHOT (release planned for 2013-09-29)
 
+ -LanguageTool requires Java 7 now
+
  -standalone version: remember the language selection for the next start
 
  -standalone version: improved window and dialog placement in a multi-monitor setup
