GUI: refactored code to use swing actions GUI: added save, save as, cut, copy, paste actions

--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -288,3 +288,19 @@ https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not b
 tray_menu_enable_server = Run HTTP server
 
 tray_tooltip_server_running = LanguageTool (HTTP server running)
+
+guiMenuEdit = &Edit
+
+guiMenuGrammar = &Grammar
+
+guiMenuSave = &Save
+
+guiMenuSaveAs = Save &As
+
+guiMenuCut = Cut
+
+guiMenuCopy = Copy
+
+guiMenuPaste = Paste
+
+guiMenuSelectAll = Select All
