GUI: add ignore option to context menu GUI: add description for some actions

--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -25,6 +25,10 @@ checkDone = Potential problems found: {0} (time: {1}ms)
 
 checkText = &Check Text
 
+checkTextShortDesc = Check Text
+
+checkTextLongDesc = Check Text
+
 correctionMessage = Correction:
 
 cs = Czech
@@ -149,6 +153,10 @@ guiMenuHelp = &Help
 guiMenuHide = &Hide to System Tray
 
 guiMenuOpen = &Open...
+
+guiMenuOpenShortDesc = Open File
+
+guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = Option&s...
 
@@ -291,11 +299,19 @@ tray_tooltip_server_running = LanguageTool (HTTP server running)
 
 guiMenuEdit = &Edit
 
-guiMenuGrammar = &Grammar
+guiMenuGrammar = &Text Checking
 
 guiMenuSave = &Save
 
+guiMenuSaveShortDesc = Save File
+
+guiMenuSaveLongDesc = Save File
+
 guiMenuSaveAs = Save &As
+
+guiMenuSaveAsShortDesc = Save File As
+
+guiMenuSaveAsLongDesc = Save File As
 
 guiMenuCut = Cut
 
@@ -310,3 +326,7 @@ guiMenuUndo = &Undo
 guiMenuRedo = &Redo
 
 autoCheckText = AutoCheck
+
+autoCheckTextShortDesc = AutoCheck
+
+autoCheckTextLongDesc = AutoCheck
