document move to github

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -2,6 +2,9 @@ LanguageTool Change Log
 
 2.3-SNAPSHOT (release planned for 2013-09-29)
 
+ -the source code has been moved to github:
+  https://github.com/languagetool-org/languagetool
+
  -LanguageTool requires Java 7 now
 
  -standalone version: remember the language selection for the next start
