[zh] add a hacky workaround for StringIndexOutOfBoundsException (Sourceforge bug 186)

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -2,6 +2,10 @@ LanguageTool Change Log
 
 2.3-SNAPSHOT (release planned for 2013-09-29)
 
+ -Chinese:
+  -added a workaround for a StringIndexOutOfBoundsException
+   (http://sourceforge.net/p/languagetool/bugs/186/)
+
  -the source code has been moved to github:
   https://github.com/languagetool-org/languagetool
 
