embedded HTTP server: the server now uses 10 threads instead of 1, hopefully making it more robust (thanks to Panagiotis Minos)

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -42,6 +42,9 @@ LanguageTool Change Log
   it looks in the class path first, and then, if the given file is not found there, in
   the filesystem
 
+ -Embedded HTTP server: the server now uses 10 threads instead of 1 (thanks to
+  Panagiotis Minos)
+
  -text extraction from Wikipedia dumps has been improved
 
 
