new class MultiThreadedJLanguageTool that makes use of as many threads as the computer has processors

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -23,6 +23,10 @@ LanguageTool Change Log
   use case of checking texts with the JLanguageTool object it shouldn't make a
   difference. (patch by Stefan Lotties)
 
+ -API: the new class MultiThreadedJLanguageTool makes use of as many threads
+  as the computer has processors. In our tests this has improved text checking
+  time by about 70%.
+
  -standalone version: remember the language selection for the next start
 
  -standalone version: improved window and dialog placement in a multi-monitor setup
