--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -16,16 +16,9 @@ LanguageTool Change Log
 
  -LanguageTool requires Java 7 now
 
- -API: Thread-safety has been improved. The recommended way of working is now to
-  create a new LanguageTool object for each thread, but to create the
-  language only once (e.g. new English()) and use that for all LanguageTool
-  instances. This changed the API of some public classes, but for the standard
-  use case of checking texts with the JLanguageTool object it shouldn't make a
-  difference. (patch by Stefan Lotties)
-
- -API: the new class MultiThreadedJLanguageTool makes use of as many threads
-  as the computer has processors. In our tests this has improved text checking
-  time by about 70%.
+ -LanguageTool makes use of multiple threads now for text checking on modern 
+  hardware, improving performance (this affects the stand-alone version, the
+  command line version and the LibreOffice/OpenOffice extension)
 
  -standalone version: remember the language selection for the next start
 
@@ -37,14 +30,23 @@ LanguageTool Change Log
   including proper handling of diacritics and replacement patterns (equivalents of MAP
   and REP features in hunspell dictionaries)
 
- -some methods in the API have been deprecated
-
  -OpenOffice/LibreOffice integration:
   -fix: the "About" dialog didn't work in Apache OpenOffice 4.0
 
- -API: JLanguageTool.loadFalseFriendRules() now behaves like JLanguageTool.loadPatternRules():
-  it looks in the class path first, and then, if the given file is not found there, in
-  the filesystem
+ -API:
+  -Some methods have been deprecated
+  -Thread-safety has been improved. The recommended use case is now to
+   create a new LanguageTool object for each thread, but to create the
+   language only once (e.g. new English()) and use that for all LanguageTool
+   instances. This changed the API of some public classes, but for the standard
+   use case of checking texts with the JLanguageTool object it shouldn't make a
+   difference. (patch by Stefan Lotties)
+  -The new class MultiThreadedJLanguageTool makes use of as many threads
+   as the computer has processors. In our tests this has improved text checking
+   time by about 70%.
+  -JLanguageTool.loadFalseFriendRules() now behaves like JLanguageTool.loadPatternRules():
+   it looks in the class path first, and then, if the given file is not found there, in
+   the filesystem
 
  -Embedded HTTP server: the server now uses 10 threads instead of 1 (thanks to
   Panagiotis Minos)
