introduce a new "max" attribute that allows to specify the maximum number of times a token may appear

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -19,6 +19,10 @@ LanguageTool Change Log
  -LanguageTool makes use of multiple threads now for text checking on modern 
   hardware, improving performance (this affects the stand-alone version, the
   command line version and the LibreOffice/OpenOffice extension)
+  
+ -Rule syntax: a new 'max' attribute allows to match an element that appears
+  up to the given number in a row. For example, <token max="2">foo</token> will 
+  match "foo" and "foo foo". Use max="-1" to allow unlimited occurrences.
 
  -standalone version: remember the language selection for the next start
 
