fixes for the 'min' attribute

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -20,8 +20,8 @@ LanguageTool Change Log
   hardware, improving performance (this affects the stand-alone version, the
   command line version and the LibreOffice/OpenOffice extension)
   
- -Rule syntax: new min/max attributes allow to match an element that appears
-  the given number of times. For example:
+ -Rule syntax: preliminary support for new min/max attributes that allow to match an
+  element that appears the given number of times. For example:
     <token min="0">foo</token> will match nothing or "foo", i.e. "foo" is optional
     <token max="2">foo</token> will match "foo" or "foo foo"
     <token min="0" max="2">foo</token> will match nothing, "foo", or "foo foo"
