--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -330,3 +330,7 @@ autoCheckText = AutoCheck
 autoCheckTextShortDesc = AutoCheck
 
 autoCheckTextLongDesc = AutoCheck
+
+guiActivateRule = Activate Rule
+
+guiMore = More...
