--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -55,6 +55,12 @@ LanguageTool Change Log
   -JLanguageTool.loadFalseFriendRules() now behaves like JLanguageTool.loadPatternRules():
    it looks in the class path first, and then, if the given file is not found there, in
    the filesystem
+  -Introduced the Chunker interface that can assign chunks (also known as phrases)
+   to tokens. For example, for noun phrases like "a fast computer" the chunker could assign
+   an 'NP-singular' (noun phrase, singular) chunk to each of the tokens in that phrase. 
+   In the grammar.xml, such a token can then be matched with this syntax:
+   <token chunk="NP-singular"></token>
+   Note that this is just the interface, no language makes use of it yet.
 
  -Embedded HTTP server: the server now uses 10 threads instead of 1 (thanks to
   Panagiotis Minos)
