very small cleanups

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -44,8 +44,8 @@ LanguageTool Change Log
  -API:
   -Some methods have been deprecated
   -Thread-safety has been improved. The recommended use case is now to
-   create a new LanguageTool object for each thread, but to create the
-   language only once (e.g. new English()) and use that for all LanguageTool
+   create a new JLanguageTool object for each thread, but to create the
+   language only once (e.g. new English()) and use that for all JLanguageTool
    instances. This changed the API of some public classes, but for the standard
    use case of checking texts with the JLanguageTool object it shouldn't make a
    difference. (patch by Stefan Lotties)
