--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -45,6 +45,9 @@ LanguageTool Change Log
 
  -API:
   -Some methods have been deprecated
+  -AbstractRuleDisambiguator has been renamed XmlRuleDisambiguator and is not abstract anymore.
+   The <Language>RuleDisambiguator classes have been removed, XmlRuleDisambiguator can be
+   used directly instead.
   -Thread-safety has been improved. The recommended use case is now to
    create a new JLanguageTool object for each thread, but to create the
    language only once (e.g. new English()) and use that for all JLanguageTool
