AnalyzedTokenReadings now implements Iterable so it can be used in foreach loops

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -66,6 +66,7 @@ LanguageTool Change Log
    In the grammar.xml, such a token can then be matched with this syntax:
    <token chunk="NP-singular"></token>
    Note that this is just the interface, no language makes use of it yet.
+  -AnalyzedTokenReadings now implements Iterable so it can be used in foreach loops
 
  -Embedded HTTP server: the server now uses 10 threads instead of 1 (thanks to
   Panagiotis Minos)
