[ca] update CHANGES.txt for Catalan

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -2,6 +2,11 @@ LanguageTool Change Log
 
 2.3-SNAPSHOT (release planned for 2013-09-29)
 
+ -Catalan:
+  -added/improved several rules
+  -fixed false alarms
+  -added a simple replace rule with hundreds of replacement suggestions
+  
  -Chinese:
   -added a workaround for a StringIndexOutOfBoundsException
    (http://sourceforge.net/p/languagetool/bugs/186/)
