document removal of AnalyzedGermanTokenReadings

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -72,6 +72,7 @@ LanguageTool Change Log
    <token chunk="NP-singular"></token>
    Note that this is just the interface, no language makes use of it yet.
   -AnalyzedTokenReadings now implements Iterable so it can be used in foreach loops
+  -AnalyzedGermanTokenReadings has been removed, AnalyzedTokenReadings can be used instead
 
  -Embedded HTTP server: the server now uses 10 threads instead of 1 (thanks to
   Panagiotis Minos)
