document chunker changes

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -33,6 +33,9 @@ LanguageTool Change Log
   Use max="-1" to allow unlimited occurrences.
   For min, only 0 or 1 is supported (1 is the default).
 
+ -English now has a chunker to detect, amongst others, singular and plural noun chunks.
+  This is documented at http://wiki.languagetool.org/using-chunks
+ 
  -standalone version:
   -The standalone version now underlines errors with a red (spelling errors) or
    blue (other errors) line (Panagiotis Minos)
@@ -70,7 +73,6 @@ LanguageTool Change Log
    an 'NP-singular' (noun phrase, singular) chunk to each of the tokens in that phrase. 
    In the grammar.xml, such a token can then be matched with this syntax:
    <token chunk="NP-singular"></token>
-   Note that this is just the interface, no language makes use of it yet.
   -AnalyzedTokenReadings now implements Iterable so it can be used in foreach loops
   -AnalyzedGermanTokenReadings has been removed, AnalyzedTokenReadings can be used instead
 
