add support for checking  text with markup, assuming the caller knows how to split the input into plain text and markup (sourceforge issue 41)

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -64,6 +64,8 @@ LanguageTool Change Log
   -AbstractRuleDisambiguator has been renamed XmlRuleDisambiguator and is not abstract anymore.
    The <Language>RuleDisambiguator classes have been removed, XmlRuleDisambiguator can be
    used directly instead.
+  -A new method JLanguageTool.check(AnnotatedText) has been introduced that allows
+   you to check text with markup. Use AnnotatedTextBuilder to build up the input.
   -Thread-safety has been improved. The recommended use case is now to
    create a new JLanguageTool object for each thread, but to create the
    language only once (e.g. new English()) and use that for all JLanguageTool
