[br] - Updated Breton POS dictionary from Apertium svn r47282        (this fixes a few false positives)      - Updated CHANGES.txt accordingly.

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -2,6 +2,11 @@ LanguageTool Change Log
 
 2.3-SNAPSHOT (release planned for 2013-09-29)
 
+ -Breton
+  -added/improved a few rules
+  -fixed false alarms
+  -updated POS dictionary from Apertium (svn r47282)
+
  -Catalan:
   -added/improved several rules
   -fixed false alarms
@@ -10,6 +15,10 @@ LanguageTool Change Log
  -Chinese:
   -added a workaround for a StringIndexOutOfBoundsException
    (http://sourceforge.net/p/languagetool/bugs/186/)
+
+ -French
+  -added/improved a few rules
+  -fixed false alarms
 
  -Portuguese:
   -added/improved a few rules
