[fr] updated French POS and Hunspell dictionary      from Dicollecte-4.10 to Dicollecte-4.12.

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -19,6 +19,7 @@ LanguageTool Change Log
  -French
   -added/improved a few rules
   -fixed false alarms
+  -updated POS tag dictionary and Hunspell dictionary to Dicollecte-4.12
 
  -Portuguese:
   -added/improved a few rules
