move helper methods that print to stdout to the commandline project, as they are not useful for core

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -71,6 +71,8 @@ LanguageTool Change Log
 
  -API:
   -Some methods have been deprecated
+  -Some methods have been moved from the Tools class (languagetool-core) to the
+   new CommandLineTools class (languagetool-commandline)
   -AbstractRuleDisambiguator has been renamed XmlRuleDisambiguator and is not abstract anymore.
    The <Language>RuleDisambiguator classes have been removed, XmlRuleDisambiguator can be
    used directly instead.
