--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -15,6 +15,11 @@ LanguageTool Change Log
  -Chinese:
   -added a workaround for a StringIndexOutOfBoundsException
    (http://sourceforge.net/p/languagetool/bugs/186/)
+   
+ -English:
+   -added replacement patterns for the spelling checker to make suggestions
+    better (now offers 'taught' for 'teached')
+   -added/improved a few rules
 
  -French
   -added/improved a few rules
